--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mohit-singh/zf2auth-acl",
+    "name": "mohit-singh/zf2authacl",
     "description": "This is ACL module plug with zfcuser module this is heighly configurable abd provide different services at controller, view and module level.",
     "type": "library",
     "keywords": [
